--- a/css/timeline.css
+++ b/css/timeline.css
@@ -93,7 +93,7 @@
 
 
 
-@media (min-width: 40rem) {
+@media (min-width: 850px) {
   .timeline ul {
     grid-template-columns: 1fr var(--line-w) 1fr;
   }
